# OpenGL_OpenCV_AR

./: README.md
Cube Demo Linux/: CMakeLists.txt  README.md
Cube Demo Linux/include/: README.md
Cube Demo Linux/include/demo/: stb_image.h
Cube Demo Linux/shader/: shader.vs  texture.vs
Cube Demo Linux/src/: glad.c  main.cpp
Cube Demo/src/: camera.yml  readme.md  shader.fs  shader.vs  源.cpp
Linux Cube Demo/: CMakeLists.txt
Linux Cube Demo/include/glad/: glad.h
Linux Cube Demo/shader/: shader.fs
Model Demo/src/: backmesh.h  camera.h  camera_pose.h  model.h  shader.fs  shader.h  shader.vs  texture.fs  texture.vs  源.cpp
Model Demo/src/models/: 班长符华.pmx
Model Demo/src/models/data/: blue.tga  blush1.tga
Skeletal Demo/include/: background.h  camera.h  config.h  mesh.h  namer.h  shader.h  sprite.h  stb_image.h  texture_manager.h  vertex.h
Skeletal Demo/src/: background.cpp  camera.cpp  config.cpp  main.cpp  mesh.cpp  namer.cpp  shader.cpp  sprite.cpp  texture_manager.cpp  vertex.cpp
